--- a/DOM/blog.html
+++ b/DOM/blog.html
@@ -2,11 +2,18 @@
 <html lang="en">
 
 <head>
+  <style>
+  body {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #eeeeee;
+    
+  }
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Blog</title>
-</head>
+  </head>
 
 <body>
   <h1>My Blog</h1>
