cv: content changes

--- a/HTML/resume/public/index.html
+++ b/HTML/resume/public/index.html
@@ -38,7 +38,7 @@
         <h3>Interesses</h3>
         <p>Fotografie (analoog en digitaal)<br>Digitale beeldbewerking (<em>Photoshop</em>,
           <em>Lightroom</em>)<br>
-          Software development: <em>Microsoft .NET (C#), HTML5.0, JavaScript</em>
+          Software development: <em>Microsoft .NET Framework (C#), HTML & CSS, JavaScript</em>
       </div>
 
     </div>
@@ -59,12 +59,22 @@
 
       <div>
         <h2>Competenties</h2>
-        <h3>.NET</h3>
+        <h3>.NET & C#</h3>
         <article>
           <ul>
             <li>C# Advanced (LINQ, events, multithreading)</li>
-            <li>WinForms</li>
             <li>Windows Presentation Foundation</li>
+            <li>WinForms</li>
+            <li>JavaScript</li>
+            <li>HTML & CSS</li>
+          </ul>
+        </article>
+        <h3>Andere</h3>
+        <article>
+          <ul>
+            <li>SQL Server</li>
+            <li>ADO.NET</li>
+            <li>Entity Framework</li>
           </ul>
         </article>
       </div>
