resume html changes

--- a/HTML/resume/public/index.html
+++ b/HTML/resume/public/index.html
@@ -120,8 +120,8 @@
 
         <p class="inline headerItem">Fondsenwerving, Direct Dialogue Fundraising </p>
         <p class="inline">(2005)</p>
-          <p>mijn taak bestond erin om in een team op openbare plaatsen in Vlaanderen voorbijgangers te overtuigen om
-            een maandelijkse financiële bijdrage te leveren aan Amnesty International.</p>
+          <blockquote>Mijn taak was om in een team op openbare plaatsen in Vlaanderen voorbijgangers te overtuigen om
+            een maandelijkse financiële bijdrage te leveren aan Amnesty International.</blockquote>
       </div>
     </div>
 </body>
