tabs: implemented dictionary

--- a/JavaScript/DOM/eventsexercise/public/index.html
+++ b/JavaScript/DOM/eventsexercise/public/index.html
@@ -35,6 +35,8 @@
           <a href="#articleOne" id="navOne">Google Chrome</a>
           <a href="#articleTwo" id="navTwo">Internet Explorer</a>
           <a href="#articleThree" id="navThree">Mozilla Firefox</a>
+          <a href="#articleFour" id="navFour">Opera</a>
+          <a href="#articleFive">Netscape Navigator</a>
         </nav>
 
         <div class="articleContainer">
@@ -54,6 +56,22 @@
           <article id="articleThree">
             <h1>Mozilla Firefox</h1>
             <p>Firefox is a free, open-source web browser from Mozilla, released in 2004.</p>
+          </article>
+
+          <article id="articleFour">
+            <h1>Opera</h1>
+            <p>Opera is a web browser for Windows, macOS, and Linux operating systems developed by Norwegian company
+              Opera Software AS.</p>
+          </article>
+
+          <article id="articleFive">
+            <h1>Netscape Navigator</h1>
+            <p>Netscape Navigator was a proprietary web browser, and the original browser of the Netscape line, from
+              versions 1 to 4.08, and 9.x. It was the flagship product of the Netscape Communications Corp and was the
+              dominant web browser in terms of usage share in the 1990s, but by 2002 its use had almost disappeared.
+              This was primarily due to the increased use of Microsoft's <em>Internet Explorer</em> web browser software, and
+              partly because the Netscape Corporation (later purchased by AOL) did not sustain Netscape Navigator's
+              technical innovation after the late 1990s.</p>
           </article>
         </div>
       </div>
