--- a/HTML/Forms/index.html
+++ b/HTML/Forms/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- action="/my-handling-form-page" -->
-    <form  method="get">
+    <form action="/my-handling-form-page" method="get">
         <div>
             <label for="name">Name:</label>
             <input type="text" id="name" name="user_name" value="Enter your name"> <!-- no closing tags -->
