--- a/HTML/resume/public/index.html
+++ b/HTML/resume/public/index.html
@@ -32,6 +32,19 @@
 
         <h3>Geboren</h3>
         <p>25 januari 1983 in Blankenberge<br>man (Belgische nationaliteit)</p>
+
+        <div class="portfolio-links">
+          <h3>Online</h3>
+          <ul >
+            <li class="link-list">
+                <a href="https://github.com/SamMonballiu" target="blank">Github</a>
+            </li>
+
+            <li class="link-list">
+                <a href="https://www.bitbucket.org/SamMonballiu_" target="blank">Bitbucket</a>
+            </li>
+          </ul>
+      </div>
       </div>
 
       <div class="kolom">
@@ -65,23 +78,23 @@
 
       <div>
         <h2>Competenties</h2>
-        <h3>.NET & C#</h3>
+        <h4>.NET & C#</h4>
         <article>
           <ul>
             <li>C# Advanced (LINQ, events, multithreading)</li>
-            <li>Unit Testing (NUnit, xUnit)</li>
-            <li>Windows Presentation Foundation</li>
+            <li>Unit Testing (NUnit, xUnit, MSTest)</li>
+            <li>Windows Presentation Foundation (MVVM)</li>
             <li>WinForms</li>
+            <li>ASP.Net: MVC5, WebForms</li>
             <li>JavaScript</li>
-            <li>HTML & CSS</li>
+            <li>HTML5 & CSS</li>
           </ul>
         </article>
-        <h3>Andere</h3>
+        <h4>Databases</h4>
         <article>
           <ul>
             <li>SQL Server</li>
-            <li>ADO.NET</li>
-            <li>Entity Framework</li>
+            <li>ORM: ADO.NET, Entity Framework, Dapper</li>
           </ul>
         </article>
       </div>
@@ -122,8 +135,7 @@
           <li>assistentie bij de opmaak van energieprestatiecertificaten (EPC) voor verkochte of verhuurde woningen
             (opmeting, invoer en berekening)</li>
         </ul>
-
-
+        
         <p class="inline headerItem">Fondsenwerving, Direct Dialogue Fundraising </p>
         <p class="inline">(2005)</p>
           <blockquote>Mijn taak was om in een team op openbare plaatsen in Vlaanderen voorbijgangers te overtuigen om
